# awsistants-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: bump.yaml  deploy.yaml  python-package.yml  release.yaml  release.yml
awsistants/: __init__.py  awsistants.py  awsistants_test.py
