[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "awsistants"
version = "0.0.3"
authors = ["fordnox <fordnox@gmail.com>"]
description = "awsistants - Awesome System Prompts Assistants python package"
homepage = "https://github.com/awesome-assistants/awsistants-python"
repository = "https://github.com/awesome-assistants/awsistants-python"
keywords = ["llm", "ai", "ai-prompts", "chatbot", "gpt"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = ["awsistants/assistants.json"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[project.urls]
Homepage = "https://github.com/awesome-assistants/awsistants-python"
Issues = "https://github.com/awesome-assistants/awsistants-python/issues"