[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "awsistants"
version = "0.1.0"
authors = ["fordnox <fordnox@gmail.com>"]
description = "awsistants - Awesome System Prompts Assistants python package"
homepage = "https://github.com/awesome-assistants/awsistants-python"
repository = "https://github.com/awesome-assistants/awsistants-python"
keywords = ["llm", "ai", "ai-prompts", "chatbot", "gpt"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = ["awsistants/assistants.json"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
towncrier = "^23.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[project.urls]
Homepage = "https://github.com/awesome-assistants/awsistants-python"
Issues = "https://github.com/awesome-assistants/awsistants-python/issues"

[tool.towncrier]
filename = "changelog.md"
title_format = "## awsistants {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/fordnox/wordplex-python/pulls/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = false
